NewOrder: Content alignment fixes
Changes:
- Used proper col-md-* values
- Arranged pizza item contents to properly fit its column
- Arranged buttons sizing
- Minor tweaks

--- a/web/css/newOrder.css
+++ b/web/css/newOrder.css
@@ -46,14 +46,18 @@
 
 .menuPizzaItem {
 	padding: 4vh 0 0 2vh;
-	width: 650px;
-	height: auto;
 }
+.pizzaThumbnail {
+	float: left;
+	width: auto;
+	height: 35%;
+}
+
 .menuPizzaItemInfo {
 	float: left;
 	margin-left: 20px;
 	text-align: left;
-	width: 400px;
+	width: calc(65% - 25px);
 }
 .menuPizzaItemInfo label{
 	text-align: left;
@@ -69,11 +73,6 @@
 .menuDrinkItem {
 	padding: 4vh 0 0;
 }
-.pizzaThumbnail {
-	float: left;
-	width: auto;
-	height: 200px;
-}
 .menuDrinkItemImg {
 	display: inline-block;
 	margin: 0 auto 0 auto;
@@ -88,18 +87,18 @@
 .incButtons {
 	margin: 65px 0;
 }
-.buttons { padding: 8vh 0 0 4vh; }
-.buttonEdit, .buttonCancel {
+.buttons { padding: 8vh 0; }
+.buttons > button { width: 100%; }
+button.buttonEdit, button.buttonCancel {
 	display: block;
 	margin: 2% auto;
 	padding: 4% 6%;
-	width: 300px;
 }
-.buttonEditPizza, .buttonEditDrink {
+button.buttonEditPizza, button.buttonEditDrink {
 	display: none;
-	margin: 0% 5%;
+	margin: 0% 4%;
 	padding: 2% 5%;
-	width: 120px;
+	width: 42%;
 }
 .buttonContainer { margin-top: 20px; }
 #buttonNewOrder, #buttonCancelAll {
@@ -113,6 +112,4 @@
 	width: 300px;
 }
 
-canvas {
-	margin: 8vh 0 0 10vh;
-}
+.timer_order > canvas { margin: 8vh; }
